; ModuleID = '/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_dup_str.c'
source_filename = "/home/carl/AnghaBench/openssl/test/extr_handshake_helper.c_dup_str.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @dup_str to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @dup_str(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* null, i8** %6, align 8
  %7 = load i64, i64* %5, align 8
  %8 = icmp eq i64 %7, 0
  br i1 %8, label %9, label %10

9:                                                ; preds = %2
  store i8* null, i8** %3, align 8
  br label %24

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call i32 @OPENSSL_strnlen(i8* %11, i64 %12)
  %14 = load i64, i64* %5, align 8
  %15 = call i64 @TEST_size_t_eq(i32 %13, i64 %14)
  %16 = icmp ne i64 %15, 0
  br i1 %16, label %17, label %22

17:                                               ; preds = %10
  %18 = load i8*, i8** %4, align 8
  %19 = load i64, i64* %5, align 8
  %20 = call i8* @OPENSSL_strndup(i8* %18, i64 %19)
  store i8* %20, i8** %6, align 8
  %21 = call i32 @TEST_ptr(i8* %20)
  br label %22

22:                                               ; preds = %17, %10
  %23 = load i8*, i8** %6, align 8
  store i8* %23, i8** %3, align 8
  br label %24

24:                                               ; preds = %22, %9
  %25 = load i8*, i8** %3, align 8
  ret i8* %25
}

declare dso_local i64 @TEST_size_t_eq(i32, i64) #1

declare dso_local i32 @OPENSSL_strnlen(i8*, i64) #1

declare dso_local i32 @TEST_ptr(i8*) #1

declare dso_local i8* @OPENSSL_strndup(i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
